  the revision tree for the batch will be available when needed, even though
  the revision tree for the collection might already have advanced beyond
  the sequence number of the snapshot in the batch. This ensures that
  shards can get in sync more reliably and more quickly.

* Fixed BTS-926: UI showing the "create index" form to non-admin users.


v3.9.3 (2022-09-02)
-------------------
      
* Added startup option `--rocksdb.periodic-compaction-ttl`.
  This option controls the TTL (in seconds) for periodic compaction of .sst
  files in RocksDB, based on the .sst file age. The default value from RocksDB
  is ~30 days. To avoid periodic auto-compaction, the option can be set to 0.

* Fixed SEARCH-366: Fixed extracting sub-attributes using projections for the
  `_id` attribute (e.g. `RETURN doc.sub._id`).

* Do not drop follower shard after too many failed shard synchronization
  attempts.

* Make AQL query explainer display "index scan + document lookup" for queries
  that use an index for filtering, but need to fetch more document data from the
  storage engine. Previously, those were labeled only as "index scan",
  obfuscating the fact that there are document lookups needed.
  Covering-index queries are still labeled "index scan, index only" as before.

* Disable optimization rule to avoid crash (BTS-951).

* Fix SEARCH-350: Crash during consolidation.

* Fix comparison of JSON schemas on DB servers after there was a schema change
  via a coordinator: the schema comparison previously did not take into account
  that some ArangoDB versions store an internal `{"type":"json"}` attribute in
  the schema, and some don't. Thus two identical schemas could compare
  differently.
  The correct schema version was always applied and used, and validation of
  documents against the schema was also not affected. However, because two
  schemas could compare unequal, this could have caused unnecessary repeated
  work for background maintenance threads.
