@@ -187,6 +187,7 @@ GraphNode::GraphNode(ExecutionPlan* plan, ExecutionNodeId id,
       _optionsBuilt(false),
       _isSmart(false),
       _isDisjoint(false),
+      _enabledClusterOneShardRule(false),
       _options(std::move(options)) {
   // Direction is already the correct Integer.
   // Is not inserted by user but by enum.
@@ -373,7 +374,10 @@ GraphNode::GraphNode(ExecutionPlan* plan,
       _isSmart(arangodb::basics::VelocyPackHelper::getBooleanValue(
           base, StaticStrings::IsSmart, false)),
       _isDisjoint(arangodb::basics::VelocyPackHelper::getBooleanValue(
-          base, StaticStrings::IsDisjoint, false)) {
+          base, StaticStrings::IsDisjoint, false)),
+      _enabledClusterOneShardRule(
+          arangodb::basics::VelocyPackHelper::getBooleanValue(
+              base, StaticStrings::ForceOneShardAttributeValue, false)) {
   if (!ServerState::instance()->isDBServer()) {
     // Graph Information. Do we need to reload the graph here?
     std::string graphName;
@@ -535,6 +539,7 @@ GraphNode::GraphNode(ExecutionPlan* plan, ExecutionNodeId id,
       _optionsBuilt(false),
       _isSmart(false),
       _isDisjoint(false),
+      _enabledClusterOneShardRule(false),
       _directions(std::move(directions)),
       _options(std::move(options)) {
   setGraphInfoAndCopyColls(edgeColls, vertexColls);
@@ -544,6 +549,7 @@ GraphNode::GraphNode(ExecutionPlan* plan, ExecutionNodeId id,
 void GraphNode::determineEnterpriseFlags(AstNode const*) {
   _isSmart = false;
   _isDisjoint = false;
+  _enabledClusterOneShardRule = false;
 }
 #endif
 
@@ -578,6 +584,7 @@ GraphNode::GraphNode(ExecutionPlan& plan, GraphNode const& other,
       _optionsBuilt(false),
       _isSmart(other.isSmart()),
       _isDisjoint(other.isDisjoint()),
+      _enabledClusterOneShardRule(other.isClusterOneShardRuleEnabled()),
       _directions(other._directions),
       _options(std::move(options)),
       _collectionToShard(other._collectionToShard) {
@@ -684,8 +691,10 @@ void GraphNode::doToVelocyPack(VPackBuilder& nodes, unsigned flags) const {
   }
 
   // Flags
-  nodes.add("isSmart", VPackValue(_isSmart));
-  nodes.add("isDisjoint", VPackValue(_isDisjoint));
+  nodes.add(StaticStrings::IsSmart, VPackValue(_isSmart));
+  nodes.add(StaticStrings::IsDisjoint, VPackValue(_isDisjoint));
+  nodes.add(StaticStrings::ForceOneShardAttributeValue,
+            VPackValue(_enabledClusterOneShardRule));
 
   // Temporary AST Nodes for conditions
   TRI_ASSERT(_tmpObjVariable != nullptr);
@@ -710,6 +719,7 @@ void GraphNode::doToVelocyPack(VPackBuilder& nodes, unsigned flags) const {
 void GraphNode::graphCloneHelper(ExecutionPlan&, GraphNode& clone, bool) const {
   clone._isSmart = _isSmart;
   clone._isDisjoint = _isDisjoint;
+  clone._enabledClusterOneShardRule = _enabledClusterOneShardRule;
 }
 
 CostEstimate GraphNode::estimateCost() const {
@@ -1023,5 +1033,9 @@ bool GraphNode::isLocalGraphNode() const { return false; }
 
 void GraphNode::waitForSatelliteIfRequired(
     ExecutionEngine const* engine) const {}
+
+void GraphNode::enableClusterOneShardRule(bool enable) { TRI_ASSERT(false); }
+
+bool GraphNode::isClusterOneShardRuleEnabled() const { return false; }
 
 #endif
